feat(categories): Solve Sonar Warnings